# artist-resolver-frontend

./: .flake8  .gitignore  README.md  Toast.py  TrackManager.py  devenv.nix  httpserver.py  main.py  main2.py  main_old.py  pyproject.toml  requirements.txt  run.ps1  styles.qss
.github/: dependabot.yml
.github/workflows/: Tests.yml  auto-merge-dependabot.yaml
artist_resolver_frontend/: __init__.py  customtreeview.py  delegates.py  httpserver.py  mainwindow.py  toast.py  trackmodel.py
requirements/: common.txt  dev.txt
tests/: conftest.py  test_MbArtist.py  test_TrackManager.py  test_WebRequests.py  test_simple_artist.py
